--- a/POSTTALE/_posts/2022-4-16-扉页.md
+++ b/POSTTALE/_posts/2022-4-16-扉页.md
@@ -1,7 +1,9 @@
 ---
 layout: post
 title: 初记	
-description: 某本书的扉页
+description: >
+  某本书的扉页
+categories: POSTTALE
 hide_last_modified: false
 ---
 
